Bug 312100 - Volume slider doesn't reflect the actual volume on startup
Summary: Volume slider doesn't reflect the actual volume on startup
Status: RESOLVED FIXED
Alias: None
Product: plasma-mediacenter
Classification: Unmaintained
Component: MediaController (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Sinny Kumari
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-23 05:24 UTC by Shantanu Tushar
Modified: 2013-03-02 18:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Shantanu Tushar 2012-12-23 05:24:26 UTC
When I start PMC, the volume slider always shows 100% even when the actual volume is lower

Reproducible: Always

Steps to Reproduce:
1. Decrease volume
2. Quit PMC
3. Start PMC again
Actual Results:  
The volume shows 100%

Expected Results:  
The volume should show the decreased value
Comment 1 Sujith H 2013-02-20 14:51:43 UTC
As per the changes I had pushed to the repo, user has adjust the volume slider for once and relaunch  PMC. Once PMC is relaunched the volume slider still shows full. But when user starts playing the song, the volume gets adjusted. The condition is playing the first song. 

Here is the git commit http://quickgit.kde.org/?p=plasma-mediacenter.git&a=commit&h=4508dcfd45b0f77cccf701b6f3b222e02fdaf76e
Comment 2 Sujith H 2013-03-02 18:45:05 UTC
Marking the bug as resolved. The changes are made here http://quickgit.kde.org/?p=plasma-mediacenter.git&a=commit&h=971340284d679215dff49efde03b6c6dc889b6e5