Fixing volume level issue during the pmc startup. Now pmc will remember the old setting of volume while relaunched, which set by the user.

BUG:312100